--- a/example_notebooks/examples.ipynb
+++ b/example_notebooks/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,21 +37,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Do k-fold cross validation with bagged decision tree base classifiers.\n",
+    "Run PU learning on a sample data set. n_repeats and n_bags should be large values for production runs. Here we use small values so the example runs quickly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlmsynth import PULearner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-dfb79cc55e6c>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-dfb79cc55e6c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from ../mlmsynth import PULearner\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performed Repeated 3-fold: 1 out of 10\n",
+      "True Positive Rate: 0.86 (+/- 0.00)\n",
+      "Performed Repeated 3-fold: 2 out of 10\n",
+      "True Positive Rate: 0.87 (+/- 0.16)\n",
+      "Performed Repeated 3-fold: 3 out of 10\n",
+      "True Positive Rate: 0.86 (+/- 0.28)\n",
+      "Performed Repeated 3-fold: 4 out of 10\n",
+      "True Positive Rate: 0.87 (+/- 0.04)\n",
+      "Performed Repeated 3-fold: 5 out of 10\n",
+      "True Positive Rate: 0.86 (+/- 0.34)\n",
+      "Performed Repeated 3-fold: 6 out of 10\n",
+      "True Positive Rate: 0.78 (+/- 0.20)\n",
+      "Performed Repeated 3-fold: 7 out of 10\n",
+      "True Positive Rate: 0.84 (+/- 0.20)\n",
+      "Performed Repeated 3-fold: 8 out of 10\n",
+      "True Positive Rate: 0.73 (+/- 0.12)\n",
+      "Performed Repeated 3-fold: 9 out of 10\n",
+      "True Positive Rate: 0.81 (+/- 0.21)\n",
+      "Performed Repeated 3-fold: 10 out of 10\n",
+      "True Positive Rate: 0.92 (+/- 0.16)\n",
+      "Accuracy: 0.83\n",
+      "95% confidence interval: [0.78, 0.87]\n"
      ]
     }
    ],
    "source": [
-    "from mlmsynth import PULearner"
+    "pul = PULearner()\n",
+    "n_splits = 3  # 3-fold CV\n",
+    "n_repeats = 10  # Repeat the entire kfold CV 10 times for averaging\n",
+    "n_bags = 10  # 10 bags for bootstrap aggregating.\n",
+    "\n",
+    "pu_stats = pul.cv_baggingDT('MAX_dataset.json', splits=n_splits, repeats=n_repeats, bags=n_bags)"
    ]
   },
   {
