--- a/example_notebooks/examples.ipynb
+++ b/example_notebooks/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_excel('../test_files/MAX_dataset.xlsx', index_col=0)\n",
-    "df = df.iloc[:, 4:]  # Get rid of non-numeric features\n",
+    "#df = df.iloc[:, 4:]  # Get rid of non-numeric features\n",
     "df = df.rename(index=str, columns={'Synt': 'PU_label'})\n",
-    "df.to_json('MAX_dataset.json')\n",
+    "df.to_json('../test_files/MAX_dataset.json')\n",
     "\n",
     "df = pd.read_excel('../test_files/MX_dataset.xlsx', index_col=0)\n",
-    "df = df.iloc[:, 3:]  # Get rid of non-numeric features\n",
+    "#df = df.iloc[:, 3:]  # Get rid of non-numeric features\n",
     "df = df.rename(index=str, columns={'Synt': 'PU_label'})\n",
-    "df.to_json('MX_dataset.json')"
+    "df.to_json('../test_files/MX_dataset.json')"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,25 +55,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Start PU Learning.\n",
       "Performed Repeated 3-fold: 1 out of 5\n",
-      "True Positive Rate: 0.75 (+/- 0.00)\n",
+      "True Positive Rate: 0.50 (+/- 0.00)\n",
       "Performed Repeated 3-fold: 2 out of 5\n",
-      "True Positive Rate: 0.42 (+/- 0.36)\n",
+      "True Positive Rate: 0.11 (+/- 0.31)\n",
       "Performed Repeated 3-fold: 3 out of 5\n",
-      "True Positive Rate: 0.33 (+/- 0.54)\n",
+      "True Positive Rate: 0.42 (+/- 0.36)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Users/nfrey/Documents/mlms/mlmsynth.py:158: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  predict_utrain = f_oob[:, 1] / n_oob\n",
+      "/mnt/c/Users/nfrey/Documents/mlms/mlmsynth.py:158: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  predict_utrain = f_oob[:, 1] / n_oob\n",
+      "/mnt/c/Users/nfrey/Documents/mlms/mlmsynth.py:194: RuntimeWarning: invalid value encountered in greater\n",
+      "  label_U[:, :splits * repeats][np.where(prob_U > 0.5)] = 1\n",
+      "/mnt/c/Users/nfrey/Documents/mlms/mlmsynth.py:214: RuntimeWarning: invalid value encountered in greater\n",
+      "  label_U_rp[np.where(prob_U_rp > 0.5)] = 1\n",
+      "/mnt/c/Users/nfrey/Documents/mlms/mlmsynth.py:216: RuntimeWarning: invalid value encountered in greater\n",
+      "  labels[np.where(prob > 0.5)] = 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Performed Repeated 3-fold: 4 out of 5\n",
-      "True Positive Rate: 0.44 (+/- 0.63)\n",
+      "True Positive Rate: 0.44 (+/- 0.83)\n",
       "Performed Repeated 3-fold: 5 out of 5\n",
       "True Positive Rate: 0.39 (+/- 0.16)\n",
-      "Accuracy: 0.43\n",
-      "95% confidence interval: [0.32, 0.53]\n"
+      "Accuracy: 0.39\n",
+      "95% confidence interval: [0.27, 0.53]\n"
      ]
     }
    ],
@@ -83,54 +111,42 @@
     "n_repeats = 5  # Repeat the entire kfold CV 10 times for averaging\n",
     "n_bags = 5  # 10 bags for bootstrap aggregating.\n",
     "\n",
-    "pu_stats = pul.cv_baggingDT('MX_dataset.json', splits=n_splits, repeats=n_repeats, bags=n_bags)"
+    "pu_stats = pul.cv_baggingDT('../test_files/MX_dataset.json', splits=n_splits, repeats=n_repeats, bags=n_bags)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['prob', 'labels', 'metrics', 'prob_rp', 'label_rp', 'tpr_rp', 'scores_rp', 'feat_rank_rp'])\n",
-      "56\n",
-      "[0.09090909 0.         0.         0.         0.        ]\n",
-      "0.5544444444444444\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(pu_stats.keys())\n",
-    "print(len(pu_stats['prob_rp']))\n",
-    "print(pu_stats['feat_rank_rp'][0])\n",
-    "print(pu_stats['prob'][0])"
+    "df = pul.df_U.copy()\n",
+    "df['synth_score'] = pu_stats['prob']\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 0])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fimp = [234, 23511, 123]\n",
-    "df = pd.Series(data=fimp)\n",
-    "df = df.sort_values(ascending=False)\n",
-    "df = df / df.max()\n",
-    "df[:2].index.values"
+    "df1 = pd.read_json('../test_files/MAX_dataset.json')\n",
+    "df2 = pd.read_json('../test_files/MX_dataset.json')\n",
+    "# df.loc[df.eval('PU_label == 0'), 'test'] = 1\n",
+    "merge = list(('M', 'X', 'n'))\n",
+    "df = pd.merge(df1, df2, on=merge, how='outer', suffixes=['_p', '_c'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_json('../test_files/MX_dataset.json')\n",
+    "np.asarray(df._get_numeric_data())[0,:]"
    ]
   },
   {
