--- a/example_nb.ipynb
+++ b/example_nb.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## mlmsynth Example Jupyter Notebook\n",
+    "## pumml Example Jupyter Notebook\n",
     "This notebook shows how to\n",
     "* Properly format input data in json files for applying PU learning.\n",
-    "* Run the mlmsynth implementation of PU learning and predict \"synthesizability scores\" for not-yet-synthesized materials.\n",
+    "* Run the pumml implementation of PU learning and predict \"synthesizability scores\" for not-yet-synthesized materials.\n",
     "* Compare synthesizability scores between \"parent\" bulk crystals and \"child\" 2D phases to identify new bulk crystals that can be synthesized and exfoliated into a new 2D material.\n",
     "* Use unsupervised clustering algorithms to analyze results."
    ]
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mlmsynth.learners import PULearner"
+    "from pumml.learners import PULearner"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mlmsynth.learners import PUInteract"
+    "from pumml.learners import PUInteract"
    ]
   },
   {
