Bug fixes and black formatting

--- a/example_nb.ipynb
+++ b/example_nb.ipynb
@@ -67,9 +67,9 @@
    "outputs": [],
    "source": [
     "pul = PULearner()\n",
-    "n_splits = 3  # 3-fold CV\n",
-    "n_repeats = 5  # Repeat the entire kfold CV 10 times for averaging\n",
-    "n_bags = 5  # 10 bags for bootstrap aggregating.\n",
+    "n_splits = 10  # Between 2 and number of positive samples; 10 is a reasonable choice\n",
+    "n_repeats = 5  # Repeat the entire training multiple times for averaging\n",
+    "n_bags = 100  # Number of bags for bootstrap aggregating; at least 100 recommended\n",
     "\n",
     "pu_stats_max = pul.cv_baggingDT('test_files/MAX_dataset.json', splits=n_splits, repeats=n_repeats, bags=n_bags)"
    ]
