Cleaning up pupredict

--- a/example_notebooks/basic_example.ipynb
+++ b/example_notebooks/basic_example.ipynb
@@ -172,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pu_env",
+   "display_name": "Python [conda env:pumml_env]",
    "language": "python",
-   "name": "pu_env"
+   "name": "conda-env-pumml_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
