--- a/example_notebooks/materials_project_example.ipynb
+++ b/example_notebooks/materials_project_example.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training Positive and Unlabeled Materials Machine Learning (PUMML) models on Materials Project data\n",
+    "## Predicting synthesizability of arbitrary crystal structures and compositions\n",
     "This notebook shows how to:\n",
-    "* Access material structures from the Materials Project (MP) using the Materials API (MAPI) or figshare and label them as synthesized (1) or not-yet synthesized (0).  \n",
-    "* Featurize materials and pre-process data for machine learning.\n",
-    "* Train PUMML models to predict material synthesizability.\n",
-    "* Evaluate and interpret model outputs."
+    "* Access material structures from the Materials Project (MP) using the Materials API (MAPI) or figshare.  \n",
+    "* Use pre-trained models to predict synthesizability of materials from either 1) Materials Project ID; 2) crystal composition; or 3) crystal structure.\n",
+    "\n",
+    "You will need a [Materials Project API key](https://materialsproject.org/open) to use the features shown in this notebook."
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,9 @@
     "from monty.serialization import loadfn, dumpfn\n",
     "\n",
     "from pymatgen.ext.matproj import MPRester\n",
-    "from pymatgen.core import Structure"
+    "from pymatgen.core import Structure, Lattice\n",
+    "\n",
+    "from pumml.pupredict import PUPredict"
    ]
   },
   {
@@ -51,7 +53,7 @@
    "source": [
     "You can access all MP structures (as of 04-24-2020) directly from figshare: https://figshare.com/account/home#/collections/4952793.  \n",
     "\n",
-    "However, the MP is constantly being updated and new structures are added. It is highly recommended that you use the MAPI to pull structure data that you are interested in. \n",
+    "However, the MP is constantly being updated and new structures are added. It is highly recommended that you use the MAPI to pull structure data that you are interested in. Get an API key for the Materials Project [here](https://materialsproject.org/open).\n",
     "\n",
     "This code shows how to apply some criteria (e.g., ignore compounds with f-block elements), get MP IDs (which does not take much time), and then download structures in chunks (time-consuming)."
    ]
@@ -147,7 +149,7 @@
    "source": [
     "### Access a small sample dataset\n",
     "We want to be responsible users of the MAPI, so to test out pumml models we can work with small MP datasets that are already downloaded.\n",
-    "Download a small example set here: https://figshare.com/articles/500_example_structures_from_Materials_Project/12252962"
+    "You can ownload a small example dataset of 500 structures [here](https://figshare.com/articles/500_example_structures_from_Materials_Project/12252962)."
    ]
   },
   {
@@ -163,305 +165,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data pre-processing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pumml = pd.DataFrame(data)"
+    "Materials Project data is a really useful source for training models, but what if we are interested in the synthesizability of a particular theoretical compound? We have pre-trained PUMML models on large subsets of the Materials Project to enable quick predictions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If a structure matches an experimentally determined crystal structure from the Inorganic Crystal Structure Database (ICSD), then it is labeled as synthesized (1). "
+    "### Predict synthesizability of theoretical compounds from MP IDs\n",
+    "We can use the `pumml.pupredict.PUPredict` class to generate synthesizability scores directly for compounds from the Materials Project. Information related to the predictions and Materials Project API access is logged to a file called `output.log`. When you create an instance of `PUPredict`, the pre-trained models and data will be downloaded to your local machine."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PU_label is 1 (0) if experimental crystal structure exists (doesn't exist)\n",
-    "df_pumml['PU_label'] = df_pumml.icsd_ids.apply(lambda x: 0 if not x else 1)"
+    "api_key = '<api_key>'  # fill this in with your key\n",
+    "pup = PUPredict(api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([0.37218361])]\n",
+      "[array([0.49403711])]\n"
+     ]
+    }
+   ],
    "source": [
-    "df_pumml.PU_label.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pumml.head()"
+    "print(pup.synth_score_from_mpid('mp-1213718')) # theoretical Cs2TbO3\n",
+    "print(pup.synth_score_from_mpid('mp-771359'))  # theoretical Cu2O3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Manual featurization\n",
-    "The thermodynamic data from DFT will do most of the heavy lifting for model predictions, but we'll add some additional features so we can look for trends later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matminer.featurizers.structure import DensityFeatures, GlobalSymmetryFeatures\n",
-    "from matminer.featurizers.composition import Meredig, CohesiveEnergy\n",
-    "\n",
-    "dfeat = DensityFeatures()\n",
-    "symmfeat = GlobalSymmetryFeatures()\n",
-    "cefeat = CohesiveEnergy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "densities, vpas, pfs, sgns, cenergies, mpids = [], [], [], [], [], []\n",
-    "for row in df_pumml.itertuples():\n",
-    "    f1, f2, f3, f4, f5 = 0, 0, 0, 0, 0\n",
-    "    try:\n",
-    "        s = row[6]\n",
-    "        mpid = row[5]\n",
-    "        mpids.append(mpid)\n",
-    "        fepa = row[2]\n",
-    "        c = s.composition\n",
-    "\n",
-    "        f = dfeat.featurize(s)\n",
-    "        f1 = f[0]\n",
-    "        f2 = f[1]\n",
-    "        f3 = f[2]\n",
-    "\n",
-    "        f = symmfeat.featurize(s)\n",
-    "        f4 = f[0]\n",
-    "        \n",
-    "        f = cefeat.featurize(c, formation_energy_per_atom=fepa)\n",
-    "        f5 = f[0]\n",
-    "    except:\n",
-    "        pass\n",
-    "    \n",
-    "    densities.append(f1)\n",
-    "    vpas.append(f2)\n",
-    "    pfs.append(f3)\n",
-    "    sgns.append(f4)\n",
-    "    cenergies.append(f5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_feats = pd.DataFrame({'material_id': mpids, 'density': densities, 'vpa': vpas, 'packing fraction': pfs,\n",
-    "                         'spacegroup_num': sgns, 'cohesive_energy': cenergies})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pumml['structure'] = df_pumml.structure.apply(lambda x: x.as_dict())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_featurized = df_pumml.merge(df_feats, on='material_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add a column indicating if cohesive energy was computed successfully\n",
-    "df_featurized['no_cohesive_energy'] = df_featurized.cohesive_energy.apply(lambda x: 1 if x > 0 else 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_featurized = df_featurized[df_featurized['spacegroup_num'] > 0]  # ignore compounds that failed to featurize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fillval = df_featurized.query('cohesive_energy>0').cohesive_energy.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill missing cohesive energies with the mean value\n",
-    "df_featurized['cohesive_energy'] = df_featurized.cohesive_energy.apply(lambda x: x if x > 0 else fillval)"
+    "The outputs represent the synthesizability scores of the theoretical compounds."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write the processed data to a json file that will be read by pumml."
+    "### Predict synthesizability by chemical formula\n",
+    "We can also predict synthesizability for a crystal composition. If there are multiple crystal structures with the same composition, synthesizability scores for each will be predicted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.04694946]), array([0.04952542])]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_featurized.to_json('pumml_mp_dataset.json')"
+    "pup.synth_score_from_formula('Ba2Yb2Al4Si2N10O4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No such compound exists in Materials Project Database'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pup.synth_score_from_formula('Na1Mg1')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train a pumml model"
+    "### Predict synthesizability by crystal structure\n",
+    "Finally, we can predict synthesizability for a crystal structure represented as a `pymatgen.structure` object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pumml.learners import PULearner"
+    "bcc_fe = Structure(Lattice.cubic(2.8), [\"Fe\", \"Fe\"], [[0, 0, 0], [0.5, 0.5, 0.5]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pul = PULearner()\n",
-    "\n",
-    "# Set hyperparameters to reasonable defaults\n",
-    "n_splits = 5 # kfold CV\n",
-    "n_repeats = 3  # Repeat the entire kfold CV n times for averaging\n",
-    "n_bags = 100  # bags for bootstrap aggregating.\n",
-    "\n",
-    "pu_stats = pul.cv_baggingDT('pumml_mp_dataset.json', splits=n_splits, repeats=n_repeats, bags=n_bags)"
+    "pup.synth_score_from_structure(bcc_fe)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Take a look at synthetic accessibility scores of unlabeled compounds"
+    "No synthesizability prediction is returned! If we check the log, we see that all MP entries for Fe already exist, so there's no need to predict synthesizability."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO - The given input with material_id \"mp-1271295\" exists.\n",
+      "INFO - The given input with material_id \"mp-136\" exists.\n"
+     ]
+    }
+   ],
    "source": [
-    "df1 = pul.df_U.copy()\n",
-    "df1['synth_score'] = pu_stats['prob']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inspect compounds with highest synthetic accessibility scores\n",
-    "df1.sort_values(by='synth_score', ascending=False)[:20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1.synth_score.plot(kind='kde')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1.query('synth_score>0.5').spacegroup_num.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save synthesis scores\n",
-    "df1.drop(columns=['structure', 'icsd_ids', 'PU_label']).to_json('synth_scores.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Number of predicted positives: ', len(df1.query('synth_score > 0.5')))\n",
-    "print('Percentage of predicted positives: ', round(len(df1.query('synth_score > 0.5')) / len(df1), 3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pul.get_feat_importances(plot_format='png')"
+    "!tail output.log -n2"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pmg_env",
+   "display_name": "Python [conda env:pumml_env]",
    "language": "python",
-   "name": "pmg_env"
+   "name": "conda-env-pumml_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -473,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
